2007-09-06  Mitz Pettel  <mitz@webkit.org>

Reviewed by Adam Roben.

        - fix http://bugs.webkit.org/show_bug.cgi?id=14685
          <rdar://problem/5349755> text-align affects <select> button but not its drop-down menu

        * platform/PlatformString.h:
        (WebCore::String::defaultWritingDirection):
        * platform/StringImpl.cpp:
        (WebCore::StringImpl::defaultWritingDirection): Moved textDirectionForParagraph()
        from RenderMenuList.cpp here.
        * platform/StringImpl.h:
        * platform/win/PopupMenuWin.cpp:
        (WebCore::PopupMenu::itemWritingDirectionIsNatural): Changed to return 'true'.
        (WebCore::PopupMenu::paint): Changed to use natural directionality for menu
        items.
        * rendering/RenderMenuList.cpp:
        (WebCore::RenderMenuList::adjustInnerStyle): Use defaultWritingDirection.


Canonical link: https://commits.webkit.org/19864@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@25386 268f45cc-cd09-0410-ab3c-d52691b4dbfc