WebCore/platform/StringImpl.h
@@ -137,6 +137,8 @@ public:
 
     Vector<char> ascii() const;
 
+    WTF::Unicode::Direction defaultWritingDirection() const;
+
 #if PLATFORM(CF)
     StringImpl(CFStringRef);
     CFStringRef createCFString() const;
